@@ -13,6 +13,7 @@
 - added a small support for Groups and Tabs into the FlowStream
 - fixed API routing with same `paths` with various HTTP methods
 - added `path` property to `SchemaOptions`, `OperationOptions`, `TaskOptions`, `AuthOptions` and `MiddlewareOptions`
+- added `split` property to `SchemaOptions`, `OperationOptions`, `TaskOptions`, `AuthOptions` and `MiddlewareOptions`
 
 ========================
 0.0.49
